<resources>
    <string name="app_name">ILoveZappos</string>

    <!-- Splash screen-->
    <string name="splash_text_1">i</string>
    <string name="splash_text_2">zappos</string>

    <!-- Navigation menu items-->
    <string name="title_transactions">Transactions</string>
    <string name="title_order_book">Order Book</string>
    <string name="title_alerts">Alerts</string>

    <!-- Transaction History chart-->
    <string name="chart_type_line">Line</string>
    <string name="chart_type_bar">Bar</string>
    <string name="chart_label">Bitcoin Price : Last Hour</string>

    <!-- Network Error-->
    <string name="network_error_title">No Internet!</string>
    <string name="network_error_message">Poor network connection detected.\nPlease check your connectivity.</string>
    <string name="retry_button">Retry</string>

    <!-- Server Error-->
    <string name="server_error_title">Oops!</string>
    <string name="server_error_message">Looks like there\'s some issue with our server.\nPlease try again in a while.</string>

    <!-- Order book-->
    <string name="title_amount">Amount</string>
    <string name="title_bid">Bid</string>
    <string name="title_ask">Ask</string>

    <!-- Alerts-->
    <string name="noAlertInfoText">You currently do not have any alerts set.</string>
    <string name="delete_button_text">delete button</string>
    <string name="add_alert_view_title">Add</string>
    <string name="edit_alert_view_title">Edit</string>
    <string name="alert_view_info">Notify me when the Bitcoin price is</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="save_button_text">Save</string>
    <string name="operator_hint">Operator</string>
    <string name="price_hint">Price</string>
    <string name="alert_name_hint">Alert name</string>
    <string name="operator_error">Must select an operator!</string>
    <string name="price_error">Must specify a price!</string>
    <string name="name_error">Must provide a name for your alert!</string>
    <string name="alert_description_prefix">Triggers when the Bitcoin price goes</string>
    <string name="alert_modal_error">All fields are mandatory!</string>

    <string-array name="operators_array">
        <item>Less than</item>
        <item>Greater than</item>
    </string-array>

</resources>
