<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_transactions">

    <fragment
        android:id="@+id/navigation_transactions"
        android:name="sh.phoenix.ilovezappos.ui.transactions.TransactionFragment"
        android:label="@string/title_transactions"
        tools:layout="@layout/fragment_transaction" />

    <fragment
        android:id="@+id/navigation_order_book"
        android:name="sh.phoenix.ilovezappos.ui.orderbook.OrderBookFragment"
        android:label="@string/title_order_book"
        tools:layout="@layout/fragment_order_book" />

    <fragment
        android:id="@+id/navigation_alerts"
        android:name="sh.phoenix.ilovezappos.ui.alerts.AlertsFragment"
        android:label="@string/title_alerts"
        tools:layout="@layout/fragment_alerts" />

</navigation>