<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="center">

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/colorPrimaryLight"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:id="@+id/viewTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:text="@string/add_alert_view_title"/>

                <ImageView
                    android:id="@+id/deleteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_delete"
                    android:contentDescription="@string/delete_button_text"
                    android:visibility="invisible"
                    android:clickable="true"
                    android:focusable="true"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/viewInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="16sp"
                android:text="@string/alert_view_info"
                android:layout_margin="16dp"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:id="@+id/operatorDropdownContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/operator_hint"
                app:errorTextColor="@color/red">

                <AutoCompleteTextView
                    android:id="@+id/operatorDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:labelFor="@+id/operatorDropdown" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/priceEditTextContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/price_hint"
                app:errorTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/priceEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/alertNameEditTextContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/alert_name_hint"
                app:errorTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/alertNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="16dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="14sp"
                    android:backgroundTint="@color/colorPrimaryLight"
                    android:text="@string/cancel_button_text"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/saveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textSize="14sp"
                    android:layout_toEndOf="@+id/cancelButton"
                    android:backgroundTint="@color/colorPrimaryLight"
                    android:text="@string/save_button_text"/>

            </RelativeLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>